<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_marginTop="@dimen/size_25dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start|center"
                android:layout_weight="0.75"
                android:layout_marginStart="5dp"
                android:padding="2dp"
                android:layout_marginLeft="5dp">
                <ImageView
                    android:id="@+id/a_back_btn"
                    android:layout_width="@dimen/size_40dp"
                    android:layout_height="@dimen/size_40dp"
                    android:src="@drawable/white_left_arrow"
                    android:background="@android:color/transparent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="About app"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>



            <LinearLayout
                android:id="@+id/side_menu_lay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:gravity="center">

                <ImageView
                    android:id="@+id/a_share"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/share_icon"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_20dp"
                android:layout_marginEnd="@dimen/size_20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginTop="@dimen/size_20dp"
                    android:textSize="26sp"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:textColor="@color/md_white_1000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/version"
                    android:textColor="@color/md_white_1000"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.0"
                    android:fontFamily="@font/montaga"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/md_white_1000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/dy"
                    android:textColor="@color/md_white_1000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_name"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/josefin_sans_bold"
                    android:textColor="@color/md_white_1000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/dis"
                    android:textColor="@color/md_white_1000"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dis_con"
                    android:layout_marginTop="@dimen/size_5dp"
                    android:textSize="15sp"
                    android:fontFamily="@font/montaga"
                    android:textColor="@color/md_white_1000"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:fontFamily="@font/montserrat"
                    android:text="LET'S CONNECT"
                    android:textColor="@color/md_white_1000"
                    android:textSize="12sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/insta"
                        android:layout_width="@dimen/size_50dp"
                        android:layout_height="@dimen/size_50dp"
                        android:src="@mipmap/insta_icon"/>

                    <ImageView
                        android:id="@+id/github"
                        android:layout_width="@dimen/size_50dp"
                        android:layout_height="@dimen/size_50dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:src="@mipmap/github_icon"/>

                    <ImageView
                        android:id="@+id/web"
                        android:layout_width="@dimen/size_40dp"
                        android:layout_height="@dimen/size_50dp"
                        android:layout_marginLeft="@dimen/size_10dp"
                        android:src="@mipmap/int_icon"/>


                </LinearLayout>


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/pp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pp"
                    android:textColor="#FFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_50dp"/>



                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ads:adSize="BANNER"
                    android:layout_gravity="bottom"
                    ads:adUnitId="@string/about_footer">
                </com.google.android.gms.ads.AdView>



            </LinearLayout>


        </ScrollView>
    </LinearLayout>

</LinearLayout>